[package]
name = "mdbook-cat-prep"
version = "1.0.0"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde_json = "1"
mdbook = "0.3"
clap = "2"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
failure = "0.1"
shells = "0.2.0"
tinytemplate = "1"
