[package]
name = "mdbook-cat-prep"
version = "1.0.8"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]
edition = "2018"
description = "a preprocessor for mdbook which provides teacher, subject, material and tag functionality"
homepage = "https://gjk.cat"
repository = "https://github.com/gjk-cat/cat-prep"
documentation = "https://docs.rs/mdbook-cat-prep/"
license = "Fair"
readme = "README.md"
keywords = ["mdbook", "wiki", "education"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde_json = "1"
mdbook = "0.3"
clap = "2"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
failure = "0.1"
shells = "0.2.0"
tinytemplate = "1"
