[package]
name = "mdbook-cat-prep"
version = "1.0.9"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]
edition = "2018"
description = "a preprocessor for mdbook which provides teacher, subject, material and tag functionality"
homepage = "https://gjk.cat"
repository = "https://github.com/gjk-cat/cat-prep"
documentation = "https://docs.rs/mdbook-cat-prep/"
license = "Fair"
readme = "README.md"
keywords = ["mdbook", "wiki", "education"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde_json = "1.0.61"
mdbook = "0.4.6"
clap = "2.33.3"
serde = { version = "1.0.121", features = ["derive"] }
walkdir = "2.3.1"
failure = "0.1.8"
shells = "0.2.0"
tinytemplate = "1.2.0"
